# microKernel

./: .gitignore  CMakeLists.txt  README.md  hasher.cpp  ipc_common.h  orchestrator.cpp  signer.cpp
GossipNode/: CMakeLists.txt  GossipNode.cpp  GossipNode.h  main.cpp  nim_gossip_node.h
GossipNode/nim/: gossip_node.nim  gossip_node.nimble
KeyGuard/: CMakeLists.txt  key_guard.cpp  key_guard.h  main.cpp
Network_Listener/: CMakeLists.txt  NetworkListener.cpp  NetworkListener.h  main.cpp
Network_Listener/nim/: nim_listener.nim
Orchestrator/: Orchestrator.cpp  Orchestrator.h  ServiceConnection.h  main.cpp
Validator/: main.cpp  validator.cpp  validator.h
proto/: orchestrator.capnp
